--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
   </div>
 
   <div class="carousel-container">
+      
+    
         <div class="carousel-track">
       <!-- Slide 1 -->
 <div class="car-card">
@@ -259,11 +261,13 @@
           <span>₹ 230.00 <small>per hour</small></span>
           <button>Book now</button>
         </div>
-      </div>
-
-
+        </div>
     </div>
   </div>
+      <div class="carousel-arrows">
+  <button class="nav-btn prev">‹</button>
+  <button class="nav-btn next">›</button>
+</div>
 
   
 
